відредагував index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <body>
-    <img src="HeadaerFoto.png" style="width:500px; height:500px;" alt="">
+    <!-- <img src="HeadaerFoto.png" style="width:500px; height:500px;" alt=""> -->
     <header class="content-header">
         <div class="header marBottom">
 
