--- a/app/index.html
+++ b/app/index.html
@@ -11,28 +11,21 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap&subset=cyrillic-ext"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="main.min.css">
-
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.min.css">
 
 </head>
 
-
-
 <body>
-    <!-- <img src="HeadaerFoto.png" style="width:500px; height:500px;" alt=""> -->
     <header class="content-header">
         <div class="header marBottom">
-
             <div class="header__menu">
                 <div class="header__menu_logo"> <span class="span">DREAMSHARE</span> </div>
                 <div class="heger__menu__links">
                     <a class="header__menu__links_link-1 btn-link ">Log in</a>
                     <a class="header__menu__links_link-2 btn-link btn-active">Sign up </a>
                 </div>
-
             </div>
-
             <div class="header__content">
                 <h1 class="header__content_title">SHARE YOUR HOLIDAY DREAM</h1>
                 <span class="header__content_text">And find the perfect partner to fullfill it</span>
@@ -42,7 +35,6 @@
         </div>
     </header>
     <main class="main">
-
         <!-- Section DRREMSHARE -->
         <section class="dreamshare__container marBottom">
             <h2 class="dreamshare__container_title">How Dreamshare works?</h2>
